--- a/Assignment_19/stylesheet.css
+++ b/Assignment_19/stylesheet.css
@@ -3,7 +3,8 @@
 #map {  position:relative;
      width: 800px;
      height: 500px;
-}#container{
+     align-content: center;
+}#container {
 	width: 800px;
 	margin-right: auto;
 	margin-left: auto;
@@ -15,53 +16,6 @@
 	background-color: black;
 	color: white;
 	text-align: center;
-}
-.legend {
-    line-height: 12px;
-    color: grey;
-}
-.legend i {
-    width: 20px;
-    height: 20px;
-    float: left;
-    margin-right: 8px;
-    opacity: 0.9;
-}
-
-.topnav {
-  overflow: hidden;
-  background-color: #333;
-}
-
-.topnav a {
-  float: left;
-  color: #f2f2f2;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-  font-size: 17px;
-}
-
-.topnav a:hover {
-  background-color: #ddd;
-  color: black;
-}
-
-.topnav a.active {
-  background-color: #4CAF50;
-  color: white;
-}
-
-.info {
-    padding: 6px 8px;
-    font: 10px/20px Arial, Helvetica, sans-serif;
-    background: white;
-    box-shadow: 0 0 15px rgba(0,0,0,0.2);
-    border-radius: 5px;
-}
-.info h4 {
-    margin: 0 0 5px;
-    color: #777;
 }
 
 #css {
