--- a/Assignment_19/stylesheet.css
+++ b/Assignment_19/stylesheet.css
@@ -3,7 +3,7 @@
 #map {  position:relative;
      width: 800px;
      height: 500px;
-     align-content: center;
+     align-content: 
 }#container {
 	width: 800px;
 	margin-right: auto;
